<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NoSurf for reddit</string>
    <string name="refresh">Refresh</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="night_mode">Night mode</string>
    <string name="amoled_night_mode">AMOLED night mode</string>
    <string name="external_browser">Launch links in external browser</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="login_instructions">You must log in to view your subscribed subreddits.</string>
    <string name="about_fragment">Copyright 2018–2020. By /u/Suspicious_Advantage</string>
    <string name="post_image_description" tools:keep="@string/post_image_description">Post image</string>
    <string name="post_thumbnail_description" tools:keep="@string/post_thumbnail_description">Post thumbnail image</string>
    <string name="logo_description">NoSurf logo</string>
    <string name="default_page_is_all">/r/all is default screen on app launch</string>
    <string name="share">Share</string>
    <string name="nsfw_filter">Blur NSFW post titles</string>
    <string name="nsfw_confirmation">&lt;b>%1$s&lt;/b>&lt;br /&gt;&lt;br /&gt;in /r/%2$s</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="enable_swipe_to_refresh">Swipe-to-refresh</string>
    <string name="show_all">Show /r/all</string>
    <string name="display_settings">Display</string>
    <string name="content_settings">Content</string>
    <string name="misc_settings">Misc</string>
    <string name="r_all">/r/All</string>
    <string name="your_subreddits">Your Subreddits</string>
</resources>