<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/mark_all_as_read"
        android:title="@string/mark_all_as_read"
        app:showAsAction="never" />

    <item
        android:id="@id/fragment_nosurf_preference_dest"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@id/fragment_about_dest"
        android:title="@string/about"
        app:showAsAction="never"/>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never"/>

    <item
        android:id="@id/fragment_nosurf_web_view_login_dest"
        android:title="@string/login"
        app:showAsAction="never"/>
</menu>
